--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,11 @@ ipython==8.18.1
 yaspin==3.0.1
 pyreadline3==3.4.1
 html2image==2.0.4.3
+scikit-learn==1.3.2
+scipy==1.11.4
 
 # for streamlit
-streamlit==1.27.1
+streamlit==1.29.0
 streamlit-option-menu==0.3.6
 streamlit-extras==0.3.2
 loguru==0.7.2
