--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # for opencodeinterpreter
-gradio==4.10.0
+gradio==3.50.2
+gradio-client==0.6.1
 python-dotenv==1.0.0
 jupyter==1.0.0
 #openai==1.5.0
@@ -23,9 +24,13 @@ pyreadline3==3.4.1
 html2image==2.0.4.3
 scikit-learn==1.3.2
 scipy==1.11.4
+langchain==0.0.352
 
 # for streamlit
 streamlit==1.29.0
 streamlit-option-menu==0.3.6
 streamlit-extras==0.3.2
 loguru==0.7.2
+numpy~=1.26.2
+pyyaml~=6.0.1
+tiktoken~=0.5.2
